[tool.poetry]
name = "mediator"
version = "0.1.0"
description = "mediator is a simple tool to help you manage your media files."
authors = ["mediator <mediator@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"